syntax = "proto3";
// Log in user with password
service Authentication {
    rpc Login (LoginRequest) returns (LoginReply) {}
    rpc Authenticate (AuRequest) returns (AuReply) {}
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginReply {
    bool isAuthenticated = 1;
    string sessionToken = 2;
}

message AuRequest {
    string sessionToken = 1;
}

message AuReply {
    bool isAuthenticated = 1;
    string username = 2;
}